--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,19 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>start</groupId>
     <artifactId>TrabalhoFoly</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>4.0-FINAL</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <mainClass>start.App</mainClass>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
+        </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -19,11 +25,6 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>13</version>
-        </dependency>
-        <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.1.0</version>
         </dependency>
     </dependencies>
     <build>
@@ -41,7 +42,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>start.projetopadrao.App</mainClass>
+                    <mainClass>start.App</mainClass>
                 </configuration>
                 <executions>
                     <execution>
