--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>start</groupId>
-    <artifactId>TrabalhoFoly</artifactId>
+    <artifactId>projetoColecaoCardGame</artifactId>
     <version>4.0-FINAL</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
